add Redis support for commit processing and enhance CloudFormation script generation