@@ -15,24 +15,27 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.util.StreamUtils;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.ArrayList;
 
 @Component("aws-ecs-cloudformation")
 @RequiredArgsConstructor
 public class AwsEcsCloudformationBuilder implements DeploymentHandler {
+
+    private final ObjectMapper objectMapper;
 
     @Override
     public void handle(DeploymentConfig config) {
         System.out.println("Generating Cloudformation script for AWS ECS deployment...");
 
         String cloudformationScript = generateCloudformationScript(config);
-        deployWithCloudformation(cloudformationScript, config.getInfrastructure());
+        deployWithCloudformation(cloudformationScript, config.getInfrastructure(), config.getType());
     }
 
     private String generateCloudformationScript(DeploymentConfig config) {
@@ -45,37 +48,56 @@ public class AwsEcsCloudformationBuilder implements DeploymentHandler {
             ClassPathResource resource = new ClassPathResource("templates/ecs-cloudformation.yml");
             String template = StreamUtils.copyToString(resource.getInputStream(), StandardCharsets.UTF_8);
 
-            String envVarsTemplate = generateEnvVarsTemplate(mainService.getEnvVars());
+            String envVarsJson = generateEnvVarsJson(mainService.getEnvVars());
+            String subnetsJson = generateSubnetsJson(network.getSubnets());
 
             return template
-                    .replace("{{CLUSTER_NAME}}", "ecs-cluster")
-                    .replace("{{SECURITY_GROUP}}", network.getSecurityGroup())
-                    .replace("{{SUBNET_1}}", network.getSubnets().get(0))
-                    .replace("{{SUBNET_2}}", network.getSubnets().get(1))
-                    .replace("{{VPC_ID}}", network.getVpc())
+                    .replace("{{VPC_ID}}", network.getVpc().trim())
                     .replace("{{CPU}}", mainService.getResources().getCpu())
                     .replace("{{MEMORY}}", mainService.getResources().getMemory().replace("Mi", ""))
                     .replace("{{IMAGE}}", mainService.getImage())
                     .replace("{{PORT}}", String.valueOf(mainService.getPort()))
                     .replace("{{REPLICAS}}", String.valueOf(mainService.getReplicas()))
-                    .replace("{{#each ENV_VARS}}", envVarsTemplate);
+                    .replace("{{ENV_VARS}}", envVarsJson)
+                    .replace("{{SUBNETS}}", subnetsJson)
+                    .replace("{{SECURITY_GROUP}}", network.getSecurityGroup().trim());
         } catch (IOException e) {
             throw new RuntimeException("Error reading CloudFormation template", e);
         }
     }
 
-    private String generateEnvVarsTemplate(List<EnvironmentVariable> envVars) {
-        if (envVars == null || envVars.isEmpty()) {
-            return "";
+    private String generateSubnetsJson(List<String> subnets) {
+        try {
+            List<String> cleanedSubnets = subnets.stream()
+                    .map(String::trim)
+                    .toList();
+            return objectMapper.writeValueAsString(cleanedSubnets);
+        } catch (IOException e) {
+            throw new RuntimeException("Error generating subnets JSON", e);
         }
-
-        return envVars.stream()
-                .map(envVar -> String.format("            - Name: \"%s\"\n              Value: \"%s\"", 
-                        envVar.getKey(), envVar.getValue()))
-                .collect(Collectors.joining("\n"));
     }
 
-    private void deployWithCloudformation(String cloudformationScript, Infrastructure infrastructure) {
+    private String generateEnvVarsJson(List<EnvironmentVariable> envVars) {
+        if (envVars == null || envVars.isEmpty()) {
+            return "[]";
+        }
+
+        List<Map<String, String>> envVarList = new ArrayList<>();
+        for (EnvironmentVariable envVar : envVars) {
+            envVarList.add(Map.of(
+                "Name", envVar.getKey(),
+                "Value", envVar.getValue()
+            ));
+        }
+
+        try {
+            return objectMapper.writeValueAsString(envVarList);
+        } catch (IOException e) {
+            throw new RuntimeException("Error generating environment variables JSON", e);
+        }
+    }
+
+    private void deployWithCloudformation(String cloudformationScript, Infrastructure infrastructure, String type) {
         AwsBasicCredentials awsCredentials = AwsBasicCredentials.create(
                 infrastructure.getCredentials().getAccessKey(),
                 infrastructure.getCredentials().getSecretKey()
@@ -86,12 +108,20 @@ public class AwsEcsCloudformationBuilder implements DeploymentHandler {
                 .credentialsProvider(StaticCredentialsProvider.create(awsCredentials))
                 .build();
 
-        String stackName = "ecs-stack-" + UUID.randomUUID().toString().substring(0, 8);
+        String stackName = type + "-" + UUID.randomUUID().toString().substring(0, 8);
+
+        try {
+
+            if (hasAlreadyCreatedStack(type, cloudFormationClient)) return;
+
+        } catch (Exception e) {
+            System.out.println("Error checking existing stacks: " + e.getMessage());
+        }
 
         CreateStackRequest createStackRequest = CreateStackRequest.builder()
                 .stackName(stackName)
                 .templateBody(cloudformationScript)
-                .capabilities(Capability.CAPABILITY_IAM)
+                .capabilities(Capability.CAPABILITY_IAM, Capability.CAPABILITY_NAMED_IAM)
                 .onFailure(OnFailure.DELETE)
                 .build();
 
@@ -106,6 +136,21 @@ public class AwsEcsCloudformationBuilder implements DeploymentHandler {
         }
     }
 
+    private static boolean hasAlreadyCreatedStack(String type, CloudFormationClient cloudFormationClient) {
+        ListStacksRequest listStacksRequest = ListStacksRequest.builder()
+                .stackStatusFilters(StackStatus.CREATE_COMPLETE, StackStatus.UPDATE_COMPLETE)
+                .build();
+        ListStacksResponse listStacksResponse = cloudFormationClient.listStacks(listStacksRequest);
+
+        for (StackSummary stack : listStacksResponse.stackSummaries()) {
+            if (stack.stackName().startsWith(type)) {
+                System.out.println("Stack already exists for this PR: " + stack.stackName());
+                return true;
+            }
+        }
+        return false;
+    }
+
     private void waitForStackCreation(CloudFormationClient cloudFormationClient, String stackName) {
         boolean stackCreationComplete = false;
         while (!stackCreationComplete) {
@@ -114,7 +159,7 @@ public class AwsEcsCloudformationBuilder implements DeploymentHandler {
                         .stackName(stackName)
                         .build();
                 DescribeStacksResponse describeStacksResponse = cloudFormationClient.describeStacks(describeStacksRequest);
-                Stack stack = describeStacksResponse.stacks().getFirst();
+                Stack stack = describeStacksResponse.stacks().get(0);
 
                 String stackStatus = stack.stackStatus().toString();
                 System.out.println("Stack status: " + stackStatus);
